--- a/src/components/public/layout/body/LayoutContent.css
+++ b/src/components/public/layout/body/LayoutContent.css
@@ -13,7 +13,7 @@
 	display: flex;
 	flex-direction: column;
 	/* background: #fbfbfb; */
-	background-color: rgba(205, 205, 205, 0.5);
+	/* background-color: rgba(205, 205, 205, 0.5); */
 	/* background-color: rgb(29, 161, 242, 0.2); */
 	flex: 2;
 }
