--- a/index.css
+++ b/index.css
@@ -79,6 +79,10 @@ button:focus-visible {
 }
 
 /* Custom styles */
-.css-1wc848c-MuiFormHelperText-root.Mui-error {
+/* .css-1wc848c-MuiFormHelperText-root.Mui-error {
+	color: #ffa7a7 !important;
+} */
+p.MuiFormHelperText-root.Mui-error {
+	/* color: azure; */
 	color: #ffa7a7 !important;
 }
