--- a/index.css
+++ b/index.css
@@ -32,12 +32,14 @@ a:hover {
 body {
 	margin: 0;
 	display: flex;
-	justify-content: center;
+	/* justify-content: center; */
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
 	background: url('/images/spacebg.png');
 	background-size: cover;
+	background-repeat: no-repeat;
+	width: 100vw;
 }
 
 h1 {
