--- a/src/components/admin/layout/body/LayoutContent.css
+++ b/src/components/admin/layout/body/LayoutContent.css
@@ -12,10 +12,14 @@
 .content-container {
 	display: flex;
 	flex-direction: column;
+	/* width: auto; */
+	/* align-items: stretch;
+	justify-content: stretch; */
+	width: 100%;
 	/* background: #fbfbfb; */
 	/* background-color: rgba(205, 205, 205, 0.5); */
 	/* background-color: rgb(29, 161, 242, 0.2); */
-	flex: 2;
+	/* flex: 2; */
 }
 
 .outlet-wrapper {
