--- a/src/components/admin/layout/sidebar/SidebarLayout.css
+++ b/src/components/admin/layout/sidebar/SidebarLayout.css
@@ -7,5 +7,6 @@
 
 	/* width: 100%; */
 	/* height: 100vh; */
-	background: rgba(255, 255, 255, 0.6);
+	/* background: rgba(255, 255, 255, 0.6); */
+	background: rgb(20, 20, 65);
 }
