--- a/src/components/public/navigation/DashFlow.css
+++ b/src/components/public/navigation/DashFlow.css
@@ -1,7 +1,7 @@
 .dash-layout {
 	display: flex;
 	align-items: stretch;
-	/* justify-content: stretch; */
+	justify-content: stretch;
 }
 .page {
 	width: 100vw;
@@ -36,7 +36,8 @@
 		display: block;
 	}
 	.sidebar {
-		height: auto !important;
+		/* height: auto !important; */
+		min-height: 100px;
 		width: 100%;
 	}
 	.h-screen {
@@ -50,8 +51,8 @@
 		align-items: center;
 	}
 	.stat-block .card {
-		/* width: 60%;
-		height: 250px; */
+		width: 90%;
+		/* height: 250px; */
 	}
 	.profile-header {
 		flex-direction: column;
@@ -59,5 +60,6 @@
 	}
 	.ref-link {
 		width: 100%;
+		padding: 35px 10px;
 	}
 }
