--- a/src/features/dashboard/public/templates/cards/stats/Stat.css
+++ b/src/features/dashboard/public/templates/cards/stats/Stat.css
@@ -8,7 +8,8 @@
 	/* background: linear-gradient(180deg, rgb(29, 161, 242) 0%, #1da1f2 100%); */
 	/* background: 'rgba(255, 255, 255, 0.3)'; */
 	/* background: rgba(29, 161, 242, 0.5); */
-	background: rgb(121 127 150);
+	/* background: rgb(121 127 150); */
+	background: rgb(20, 20, 65);
 	/* flex: 1; */
 	/* padding: 30; */
 	/* width: '15%'; */
