--- a/index.css
+++ b/index.css
@@ -14,7 +14,12 @@
 	-moz-osx-font-smoothing: grayscale;
 	height: 100vh;
 }
-
+/* div#root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+} */
 a {
 	font-weight: 500;
 	/* color: #646cff; */
@@ -65,6 +70,13 @@ button:hover {
 button:focus,
 button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
+}
+
+.err-cta {
+	display: flex;
+	width: 100vw;
+	justify-content: center;
+	align-items: center;
 }
 
 @media (prefers-color-scheme: light) {
