--- a/src/components/public/navigation/DashFlow.css
+++ b/src/components/public/navigation/DashFlow.css
@@ -26,6 +26,7 @@
 	} */
 	.content-container {
 		width: 100%;
+		margin-top: 6rem;
 	}
 	.dash-layout {
 		display: flex;
@@ -40,6 +41,8 @@
 		/* height: auto !important; */
 		min-height: 100px;
 		width: 100%;
+		position: absolute;
+		top: 0;
 	}
 	.h-screen {
 		height: auto;
